[package]
name = "tiny-cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
colored = "2.1.0"
markdown = "0.3.0"
