[package]
name = "tiny-cms"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
colored = "2.1.0"
lazy_static = "1.4.0"
markdown = "0.3.0"
regex = "1.10.4"
tokio = "1.36.0"
syntect = "5.0"

[dev-dependencies]
rand = "0.8.5"
test-context = "0.3.0"

[build-dependencies]
cc="*"
